# ferrite

./: .gitignore  .gitmodules  Cargo.toml  README.md  justfile
schema/: .env  ferrite.yaml
src/: add.rs  cli.rs  disable.rs  download.rs  init.rs  main.rs  remove.rs  scripts.rs  structs.rs  update_version.rs  upgrade.rs
src/config/: error.rs  mod.rs  types.rs  upgrade.rs
src/mods/: disable.rs  error.rs  mod.rs  remove.rs
src/server/: download.rs  error.rs  installers.rs  mod.rs  structs.rs
src/upgrade/: download.rs  error.rs  mod.rs  resolve.rs
