[package]
name = "ferrite"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = "4.5.37"
colored = "3.0.0"
config = "0.15.11"
ferinth = "2.11.1"
fs_extra = "1.3.0"
indicatif = "0.17.11"
inquire = "0.7.5"
libium = { path = "./ferium/libium/", package = "libium" }
parking_lot = "0.12.3"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
size = "0.5.0"
tokio = {version = "1.44.2", features = ["full"]}
serde_yaml = "0.9"
