[package]
name = "ferrite"
version = "0.9.0"
edition = "2024"

[dependencies]
clap = "4.5.60"
colored = "3.1.1"
ferinth = "2.12.0"
fs_extra = "1.3.0"
indicatif = "0.18.4"
inquire = "0.9.4"
libium = { path = "./ferium/libium/", package = "libium" }
parking_lot = "0.12.5"
reqwest = { version = "0.12.28", features = ["json"] } # Requires update to libium to update to 0.13
serde = { version = "1.0.228", features = ["derive"] }
size = "0.5.0"
tokio = { version = "1.49.0", features = ["full"] }
dotenvy = "0.15.7"
serde_norway = "0.9.42"
blake3 = "1.8.3"
serde-xml-rs = "0.8.0"
thiserror = "2.0.18"
furse = "1.6.1"
